complated the Animal's tabla

--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Type</th>
+      <th>Category</th>
       <th>Description</th>
       <th>Location</th>
       <th>Adapted</th>
@@ -16,7 +16,7 @@
   <tbody>
     <% @animals.each do |animal| %>
       <tr>
-        <td><%= animal.type %></td>
+        <td><%= animal.category %></td>
         <td><%= animal.description %></td>
         <td><%= animal.location %></td>
         <td><%= animal.adapted %></td>
