--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Type:</strong>
-  <%= @animal.type %>
+  <strong>Category:</strong>
+  <%= @animal.category %>
 </p>
 
 <p>
