--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :type %>
-    <%= form.text_field :type %>
+    <%= form.label :category %>
+    <%= form.text_field :category %>
   </div>
 
   <div class="field">
