--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,14 @@
   </head>
 
   <body>
+  <% if user_signed_in? %>
+  <%= link_to "Logout" , destroy_user_session_path , method: :delete %>
+  <%= current_user.email %>
+<% else %>
+  <%= link_to "Log in" , new_user_session_path %>
+  <%= link_to "Sign Up" , new_user_registration_path %>
+
+  <% end%> 
     <%= yield %>
   </body>
 </html>
