--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,23 @@
   </head>
 
   <body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+   <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
   <% if user_signed_in? %>
-  <%= link_to "Logout" , destroy_user_session_path , method: :delete %>
+  <%= link_to "Logout"  , destroy_user_session_path ,class:"nav-item nav-link active", method: :delete %>
   <%= current_user.email %>
 <% else %>
-  <%= link_to "Log in" , new_user_session_path %>
+  <%= link_to "Log in"  ,new_user_session_path %>
   <%= link_to "Sign Up" , new_user_registration_path %>
 
   <% end%> 
+   </div>
+  </div>
+  </nav >
     <%= yield %>
   </body>
 </html>
