--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,28 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 @import "bootstrap";
+@import url("https://fonts.googleapis.com/css?family=Katibeh|Mirza");
+
+p{
+    text-align: right;
+    font-size: 20px;
+}
+
+.jumbotron {
+    padding: 0;
+}
+
+body{
+    text-align: right;
+     
+}
+h1{
+   font-family: 'Katibeh', cursive;
+   font-size:50px;
+}
+.jumbotron.text-center{
+     background: rgb(239, 224, 141);
+
+}
