--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -10,25 +10,27 @@
       </ul>
     </div>
   <% end %>
+  <div class="card-body px-lg-5 pt-0">
+  <form class="text-center" style="color: #757575;">
 
-  <div class="field">
-    <%= form.label :category %>
-    <%= form.text_field :category %>
+  <div class="md-form">
+    <%= form.label :العنوان %>
+    <%= form.text_field :title,class:"form-control" %>
+   </div>
+
+  <div class="md-form">
+    <%= form.label :نوعه %>
+    <%= form.text_field :category,class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= form.label :location %>
-    <%= form.text_field :location %>
+  <div class="md-form">
+    <%= form.label :الوصف %>
+    <%= form.text_area :description,class:"form-control" %>
   </div>
 <%= form.hidden_field :user_id, value: current_user.id%>
-  <div class="field">
-    <%= form.label :adapted %>
-    <%= form.check_box :adapted %>
+  <div class="md-form">
+    <%= form.label :الموقع %>
+    <%= form.text_field :location,class:"form-control" %>
   </div>
   
   <div class="field">
@@ -36,6 +38,11 @@
     <%= form.file_field :image %>
   </div>
 
+  <div class="md-form">
+    <%= form.label :تبنى %>
+    <%= form.check_box :adapted,class:"form-control" %>
+  </div>
+<div class="d-flex justify-content-around">
   <div class="actions">
     <%= form.submit %>
   </div>
