--- a/app/views/animals/edit.html.erb
+++ b/app/views/animals/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', animal: @animal %>
 
-<%= link_to 'Show', @animal %> |
-<%= link_to 'Back', animals_path %>
+<%= link_to 'عرض', @animal %> |
+<%= link_to 'خلف', animals_path %>
