--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,35 +1,15 @@
-<p id="notice"><%= notice %></p>
 
-<h1>Animals</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Category</th>
-      <th>Description</th>
-      <th>Location</th>
-      <th>Adapted</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container" class="animal-list">
+  <% @animals.each do |animal| %>
+    <div class="row"> 
+      <%= link_to animal do  %>
+         <p><%= animal.title %></p>
+      <% end %>
+    </div>
+  <% end %>
+</div>
+<%= link_to 'إضافة طلب جديد', new_animal_path %>
 
-  <tbody>
-    <% @animals.each do |animal| %>
-      <tr>
-        <td><%= animal.category %></td>
-        <td><%= animal.description %></td>
-        <td><%= animal.location %></td>
-        <td><%= animal.adapted %></td>
-        <td><%= animal.image %></td>
-        <td><%= link_to 'Show', animal %></td>
-        <td><%= link_to 'Edit', edit_animal_path(animal) %></td>
-        <td><%= link_to 'Destroy', animal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
 
-<%= link_to 'New Animal', new_animal_path %>
