--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,26 +1,27 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
-  <strong>Category:</strong>
+  <strong>:نوعه</strong>
   <%= @animal.category %>
 </p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>:الوصف</strong>
   <%= @animal.description %>
 </p>
 
 <p>
-  <strong>Location:</strong>
+  <strong>:الموقع</strong>
   <%= @animal.location %>
 </p>
 
 <p>
-  <strong>Adapted:</strong>
+  <strong>تبنى</strong>
   <%= @animal.adapted %>
 </p>
 <p>
-  <strong>Image:</strong>
+  <strong>صوره </strong>
   <%= image_tag @animal.image.url.to_s %>
 </p>
 
@@ -37,3 +38,6 @@
 <%= render 'comments/form', comment: @comment, url: animal_comments_path(@animal) , animal_id: @animal.id %>
 
 <%= link_to 'Back', animals_path %>
+<%= link_to 'تعديل', edit_animal_path(@animal) %> |
+<%= link_to 'خلف', animals_path %>
+
