--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,23 +9,23 @@
   </head>
 
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-   <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav">
+  <div class="jumbotron text-center">
+  
+  
+<nav class="nav" class="registration">
   <% if user_signed_in? %>
-  <%= link_to "Logout"  , destroy_user_session_path ,class:"nav-item nav-link active", method: :delete %>
+  <%= link_to "تسجيل الخروج"  , destroy_user_session_path,class:"nav-link " , method: :delete %>
   <%= current_user.email %>
 <% else %>
-  <%= link_to "Log in"  ,new_user_session_path %>
-  <%= link_to "Sign Up" , new_user_registration_path %>
+  <%= link_to "تسجيل الدخول "  ,new_user_session_path,class:"nav-link"  %>
+  <%= link_to " إنشاء حساب" , new_user_registration_path,class:"nav-link" %>
+  <% end%>
+</nav>
 
-  <% end%> 
+   <h1>تبناني</h1> 
    </div>
-  </div>
-  </nav >
+  
+
     <%= yield %>
     <%= javascript_include_tag 'application' %>
   </body>
