--- a/app/views/animals/edit.html.erb
+++ b/app/views/animals/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', animal: @animal %>
 
 <%= link_to 'عرض', @animal %> |
-<%= link_to 'خلف', index_path %>
+<%= link_to 'خلف', root_path %>
