change language and add style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,9 @@ h1{
      background: rgb(239, 224, 141);
 
 }
+.actions input {
+     outline: none; 
+     -webkit-appearance: none;
+     border: none !important ; 
+    background:  none !important ; 
+}
