--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -42,8 +42,8 @@
     <%= form.label :تبنى %>
     <%= form.check_box :adapted,class:"form-control" %>
   </div>
-<div class="d-flex justify-content-around">
-  <div class="actions">
+
+  <div class="actions btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0">
     <%= form.submit %>
   </div>
 <% end %>
