--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -1,6 +1,6 @@
 
 
-<div class="container" class="animal-list">
+<div class="container" >
   <% @animals.each do |animal| %>
     <div class="row"> 
       <%= link_to animal do  %>
