--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html dir="rtl">
   <head>
-    <title>PetsAdaption</title>
+    <title>Pets Adaption</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -25,8 +25,10 @@
    <h1>تبناني</h1> 
    </div>
   
+   <div class="container">
 
     <%= yield %>
     <%= javascript_include_tag 'application' %>
+    </div>
   </body>
 </html>
