--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -9,6 +9,7 @@
       <th>Description</th>
       <th>Location</th>
       <th>Adapted</th>
+      <th>Image</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= animal.description %></td>
         <td><%= animal.location %></td>
         <td><%= animal.adapted %></td>
+        <td><%= animal.image %></td>
         <td><%= link_to 'Show', animal %></td>
         <td><%= link_to 'Edit', edit_animal_path(animal) %></td>
         <td><%= link_to 'Destroy', animal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
