--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,6 @@ h1{
      border: none !important ; 
     background:  none !important ; 
 }
+.text-center{
+    background:rgba(186, 206, 181 ,0.4)
+}
