--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,33 @@
-<h2>انشاء حساب</h2>
+<div class="card">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <h5 class="card-header info-color white-text text-center py-4">
+    <strong>إنشاء الحساب</strong>
+  </h5>
+<div class="card-body px-lg-5 pt-0">
+ 
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name),class:"text-center" ) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :"البريد الالكتروني" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+ <div class="md-form">
+    <%= f.label :"البريد الالكتروني"%><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email",class:"form-control" %>
   </div>
 
-  <div class="field">
+ <div class="md-form">
     <%= f.label :"كلمة المرور" %>
     <% if @minimum_password_length %>
     <em>( حروف او ارقام<%= @minimum_password_length %> يجيب ان لا يقل عن )</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password",class:"form-control" %>
   </div>
 
-  <div class="field">
+  <div class="md-form">
     <%= f.label :"تأكيد كلمة المرور" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password",class:"form-control" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "إنشاء حساب" %>
+    <%= f.submit "إنشاء حساب",class:"btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" %>
   </div>
 <% end %>
 
