--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,11 @@ p{
 
 body{
     text-align: right;
+    // background: url(https://welovecatsandkittens.com/wp-content/uploads/2015/11/cuter-face.jpg);
+    background-size: cover; 
+background-repeat: no-repeat;
+background-attachment: fixed;
+    
      
 }
 h1{
