--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -25,7 +25,7 @@
     <%= form.label :location %>
     <%= form.text_field :location %>
   </div>
-
+<%= form.hidden_field :user_id, value: current_user.id%>
   <div class="field">
     <%= form.label :adapted %>
     <%= form.check_box :adapted %>
