--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -41,7 +41,8 @@
   <div class="md-form">
     <%= form.label :تبنى %>
     <%= form.check_box :adapted,class:"form-control" %>
-  </div>
+<%= form.hidden_field :user_id, value: current_user.id%>
+
 
   <div class="actions btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0">
     <%= form.submit %>
