--- a/app/views/animals/edit.html.erb
+++ b/app/views/animals/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Animal</h1>
+<h1>تعديل الطلب</h1>
 
 <%= render 'form', animal: @animal %>
 
 <%= link_to 'عرض', @animal %> |
-<%= link_to 'خلف', animals_path %>
+<%= link_to 'خلف', index_path %>
