--- a/app/views/animals/new.html.erb
+++ b/app/views/animals/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Animal</h1>
+<h1>طلب جديد</h1>
 
 <%= render 'form', animal: @animal %>
 
-<%= link_to 'Back', animals_path %>
+<%= link_to 'خلف', root_path %>
