bootstrap and change the code

--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -55,5 +55,5 @@
 
 <%= link_to 'Back', animals_path %>
 <%= link_to 'تعديل', edit_animal_path(@animal) %> |
-<%= link_to 'خلف', animals_path %>
+<%= link_to 'خلف', root_path %>
 
