--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -5,8 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Body</th>
-      <th>User</th>
+      <th>الوصف</th>
+      <th>المستخدم</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= comment.body %></td>
         <td><%= comment.user %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'عرض', comment %></td>
+        <td><%= link_to 'تعديل', edit_comment_path(comment) %></td>
+        <td><%= link_to 'حذف', comment, method: :delete, data: { confirm: 'هل انت متأكد؟' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'إضافة تعليق', new_comment_path %>
