--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,18 +8,27 @@
   <% end%>
 </nav>
 
-<ul class="nav justify-content-center">
-  <li class="nav-item">
-<%= link_to ' تبنى', animals_path,class:"nav-link active" %>
-</li>
-<li class="nav-item">
-<%= link_to 'طلب تبني',new_animal_path , class:"nav-link active" %>
-</li>
-<li class="nav-item">
-<%= link_to 'الداعمين', class:"nav-link active" %>
-</li>
-</ul>
+<nav class="navbar navbar-expand-lg navbar-light">
+  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <%= link_to ' تبنى', animals_path,class:"nav-link active " %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'أنقذني ',new_animal_path , class:"nav-link active " %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'الداعمين',root_path , class:"nav-link active " %>
+      </li>
+     
+    </ul>
+  </div>
+</nav>
 
-<h1>مرحبا بكم في مجتمع تبناني</h1>
+<h1 class="homepage">مرحبا بكم في مجتمع تبناني</h1>
 
 
