--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -44,6 +44,11 @@
     <%= form.label :image %><br>
     <%= form.file_field :image %>
   </div>
+  
+  <div class="field">
+    <%= form.label :image %><br>
+    <%= form.file_field :image %>
+  </div>
 
   <div class="form-group">
     <%= form.label :تبنى %>
