--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -2,6 +2,17 @@
 <div class="container">
   <div class="row">
   <% @animals.each do |animal| %>
+    <div class="row"> 
+      <%= link_to animal do  %>
+         <p class="list-group-item"><%= animal.description %></p>
+      <% end %>
+    </div>
+  <% end %>
+</div>
+</div>
+
+
+
     <div class="col-md-4 mt-2">
       <div class="card">
         <%= image_tag animal.image.url.to_s, class: "card-img-top" %>
