--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<div class="container mycontainer">
+<div class="container saracontainer">
 <%= form_with(model: animal, local: true) do |form| %>
   <% if animal.errors.any? %>
     <div id="error_explanation">
