--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,14 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Body:</strong>
+  <strong>الوصف :</strong>
   <%= @comment.body %>
 </p>
 
 <p>
-  <strong>User:</strong>
+  <strong>المستخدم :</strong>
   <%= @comment.user %>
 </p>
 
 <%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+
