fixed comments , users cant delete others , User must exist to add comment's , the comment body should be not empty

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -17,7 +17,11 @@
   </div>
 
   <%= form.hidden_field :animal_id, value: animal_id%>
-  <%= form.hidden_field :user_id, value: current_user.id%>
+
+
+  <% if current_user %>
+    <%= form.hidden_field :user_id, value: current_user.id%>
+  <% end %>
 
   <div class="actions">
     <%= form.submit %>
