--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -53,8 +53,11 @@
   <div class="form-group">
     <%= form.label :تبنى %>
     <%= form.check_box :adapted,class:"form-control" %>
-<%= form.hidden_field :user_id, value: current_user.id%>
+  </div>
 
+  <% if current_user %>
+    <%= form.hidden_field :user_id, value: current_user.id%>
+  <% end %>
 
   <div class="actions btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0">
     <%= form.submit %>
