--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -31,8 +31,10 @@
 <h2>Comments</h2>
 
 <% @animal.comments.each do |comment| %>
+  <% if comment.body != "" %>
     <p> <%= comment.body %> </p>
     <p> <%= comment.user.email %> </p>
+  <% end %>
 <% end %>
 
 <%= render 'comments/form', comment: @comment, url: animal_comments_path(@animal) , animal_id: @animal.id %>
@@ -44,16 +46,4 @@
 <%= link_to 'Edit', edit_animal_path(@animal) %> |
 
 
-<h2>Comments</h2>
-
-<% @animal.comments.each do |comment| %>
-    <p> <%= comment.body %> </p>
-    <p> <%= comment.user.email %> </p>
-<% end %>
-
-<%= render 'comments/form', comment: @comment, url: animal_comments_path(@animal) , animal_id: @animal.id %>
-
-<%= link_to 'Back', animals_path %>
-<%= link_to 'تعديل', edit_animal_path(@animal) %> |
-<%= link_to 'خلف', root_path %>
 
