--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,9 @@
   <%= link_to " إنشاء حساب" , new_user_registration_path,class:"nav-link btn btn-outline-warning btn-rounded waves-effect" %>
   <% end%>
 </nav>
-
-  <h1 >تبناني</h1> 
+  <div class="main-title">
+    <%= link_to root_path do%> <h1> تبناني </h1><%end%>
+  </div>
    </div>
   <p id="notice"><%= notice %></p>
 
