--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,6 @@
+
+
+<div class="container log-in">
 <div class="card">
 
   <h5 class="card-header info-color white-text text-center py-4">
@@ -28,6 +31,7 @@
 
   <div class="actions">
     <%= f.submit "إنشاء حساب",class:"btn btn-outline-info btn-rounded btn-block my-4 waves-effect z-depth-0" %>
+  </div>
   </div>
 <% end %>
 
