--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -84,9 +84,11 @@ nav-link {
      background: rgb(244, 244, 212);
 
 }
-.nav-link {  
-    margin: 15px;
-}
+
+
+.nav-link {
+    
+    margin: 15px;}
 
     .navbar.navbar-expand-lg.navbar-light{
         background: rgba(0,0,0,0.3);
