--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,11 +39,11 @@ h1{
     margin: 180px 0;
 
 }
-.homepage:hover{
-    background: rgba(255,255,255,0.4);
-            text-align: center;
-        padding: 5px 5px 5px 15px;
-}
+// .homepage:hover{
+//     background: rgba(255,255,255,0.4);
+//             text-align: center;
+//         padding: 5px 5px 5px 15px;
+// }
 .pages .jumbotron.text-center{
      background: #9DB5B2;
      display: none;
