--- a/app/views/animals/_form.html.erb
+++ b/app/views/animals/_form.html.erb
@@ -41,7 +41,7 @@
   </div>
   
   <div class="field">
-    <%= form.label :image %><br>
+    <%= form.label :"الصوره " %><br>
     <%= form.file_field :image %>
   </div>
 
