--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class="container">
 <h1>Comments</h1>
 
 <table>
@@ -27,3 +27,4 @@
 <br>
 
 <%= link_to 'إضافة تعليق', new_comment_path %>
+</div>
