--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,7 +52,7 @@ h1{
     background:  none !important ; 
 }
 .text-center{
-    background:rgba(186, 206, 181 ,0.4)
+    background:rgba(186, 206, 181 ,0.3)
 }
 .pages{
 text-align: right;
@@ -83,7 +83,7 @@ nav-link {
 .jumbotron.text-center{
      background: rgb(244, 244, 212);
 
-}
+}}
 
 
 .nav-link {
@@ -134,4 +134,13 @@ nav-link {
 
 .card-body{
 border: 1px solid rgba(0, 0, 0, 0.125); 
+}
+
+.bg-overlay {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
